# Qubitz-Chat-Application

./: README.md  cdk.json  package.json  tsconfig.json
app/: Dockerfile  app.py  new_app.py  requirements.txt
app/agent-core/: agentcore_config.yaml  app.py  deploy_to_agentcore.py  invoke_agentcore.py  pyproject.toml  requirements.txt  setup_observability.py  test_local.sh
docker/: requirements.txt
docker/app/: __init__.py  app.py
docker/app/api/: __init__.py  routes.py
docker/app/config/: __init__.py  agent_config.py  prompts.py
docker/app/core/: __init__.py  agent_registry.py  agent_router.py  base_strategy.py  execution_manager.py  request_classifier.py
docker/app/models/: __init__.py  multi_agent_models.py
docker/app/tests/: __init__.py  test_agent_registry.py  test_agent_router.py  test_base_strategy.py  test_execution_manager.py  test_multi_agent_models.py  test_request_classifier.py  test_specialized_agents.py  test_strategy_execution.py
docker/app/tools/: __init__.py  http_tools.py
etc/: group  gshadow  ld.so.cache  passwd  shadow  shadow-
etc/apt/sources.list.d/: debian.sources
root/: .wget-hsts
usr/sbin/: badblocks  chgpasswd  chpasswd  cppw  debugfs  dumpe2fs  e2freefrag  e2fsck  e2image  e2undo  e4crypt  e4defrag  faillock  filefrag  groupadd  groupdel  groupmems  groupmod  grpck  grpconv  grpunconv  iconvconfig  ldconfig  logsave  mke2fs  mkhomedir_helper  mklost+found  newusers  nologin  pam_timestamp_check  pwck  pwconv  pwhistory_helper  pwunconv  resize2fs  tune2fs  unix_chkpwd  unix_update  useradd  userdel  (+3 more)
(+213 files in other folders)
