[project]
name = "agentcore-workflow-agents"
version = "19.0.0"
description = "Production multi-agent system with AWS Bedrock AgentCore"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "boto3>=1.26.0",
    "bedrock-agentcore-runtime",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "aws-opentelemetry-distro",
    "strands-tools"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
